--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.8</version>
+            <artifactId>jackson-core</artifactId>
+            <version>2.15.0-rc1</version>
         </dependency>
         <dependency>
             <groupId>org.spockframework</groupId>
